# fancy

./: CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: ccpp.yml
cmake/: CPM.cmake
include/: fancy.hpp
source/: main.cpp
src/: Fancy.hpp  fancy.hpp  head.hpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
